# proliferation-index

./: .gitignore  README.md  compute_pi.py  pyproject.toml
gene_lists/: atomic_cc_genes.json  cc_genes_pool.json  cc_genes_r02.json  regev_lab.json  seurat_default.json
results/: loo_correlation.csv  loo_correlation_long.csv  validation_summary.csv
src/proliferation_index/: __init__.py  compute_pi.py  pi_functions.py
src/proliferation_index/gene_lists/: cc_genes_r03.json  cc_genes_r04.json
validation/: 01_gene_LOO_correlation.py  02_validate_PI_sciplex.py
