[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proliferation-index"
version = "0.1.0"
description = "Data-adaptive Proliferation Index (PI) for scRNA-seq"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "anndata>=0.9",
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.5",
    "psutil",
]

[project.scripts]
p_index = "proliferation_index.compute_pi:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
proliferation_index = ["gene_lists/*.json"]
